--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/jkeylu/node-mpg123-util",
   "dependencies": {
     "bindings": "~1.2.1",
-    "nan": "~2.1.0"
+    "nan": "2.3.5"
   },
   "devDependencies": {
     "lame": "~1.2.0",
